# BemaniTools

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
include/Bemani/: BFCodec.h  BFContainer.h  BFDefaults.h  JBT.h  Marker.h
ios/: MarkerListLoaderExample.xm
ios/JubeatDisplayFix/: JubeatDisplayFix.plist  Makefile  README.md  Tweak.xm  control
lib/: BFCodec.cpp  BFContainer.cpp  BFDefaults.cpp  FileSupport.cpp  FileSupport.h  JBT.cpp  Marker.cpp  ZipSupport.cpp  ZipSupport.h
tests/: BMTTests.cpp
tools/: BFCLI.cpp  BemaniTools.cpp
